Atualiza descrição e rodapé

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'Tá tudo ok'
-description: 'Documentando o desmonte da democracia no regime Bolsonaro.'
+description: 'Documentando o desmonte da democracia no regime Bolsonaro da eleição ao fim.'
 logo: ''
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
